2007-07-01 Braden McDaniel  <braden@endoframe.com>

	* lib/antlr/GNUmakefile.am (EXTRA_DIST): Updates for ANTLR 2.7.7.

2007-07-01 Braden McDaniel  <braden@endoframe.com>

	* openvrml.pc.in: Added BOOST_LIB_SUFFIX to -lboost_thread.

2007-06-30 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Fixed comparison of with_libjs shell variable.

2007-06-30 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp: Check to see whether
	HAVE_WINDOWS_H and HAVE_APPLE_OPENGL_FRAMEWORK are defined.

2007-06-30 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(trackball(float, float, float, float)): Initialize rotation.

2007-06-30 Braden McDaniel  <braden@endoframe.com>

	Expose common attributes of lighting nodes via
	openvrml::light_node.

	* src/libopenvrml/openvrml/node.cpp
	(openvrml::light_node::ambient_intensity() const): Added function.
	(openvrml::light_node::intensity() const): Added function.
	(openvrml::light_node::on() const): Added function.
	(openvrml::light_node::color() const): Added function.
	* src/libopenvrml/openvrml/node.h
	(openvrml::light_node): Added member functions ambient_intensity,
	do_ambient_intensity, intensity, do_intensity, on, do_on, color,
	do_color.
	* src/libopenvrml/openvrml/vrml97node.cpp
	(abstract_light_node): Removed functions ambient_intensity,
	intensity, on, color.  Added virtual functions
	do_ambient_intensity, do_intensity, do_on, do_color.

2007-06-30 Braden McDaniel  <braden@endoframe.com>

	automake no longer requires that M4 macros be explicitly
	listed (in EXTRA_DIST) in order to be packaged.

	* Makefile.am
	* configure.ac
	* m4/COPYING: Removed; a copy of the GPL is now in the package
	root directory.
	* m4/Makefile.am: Removed.

2007-06-21 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Added option --with-libjs to enable use of libjs
	built from the stand-alone SpiderMonkey distribution.
